add swagger doc to running-cost api method
